--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
     "axios": "^0.19.2",
     "nuxt": "^2.0.0"
   },
