--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
     "axios": "^0.19.2",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-js-modal": "^1.3.33"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
@@ -24,6 +25,7 @@
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^4.0.0",
     "node-sass": "^4.13.1",
+    "pretty-checkbox-vue": "^1.1.9",
     "sass-loader": "^8.0.2"
   }
 }
