--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/style-resources": "^1.0.0",
     "axios": "^0.19.2",
     "nuxt": "^2.0.0",
+    "simplebar-vue": "^1.4.0",
     "vue-js-modal": "^1.3.33"
   },
   "devDependencies": {
