--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.19.2",
     "nuxt": "^2.0.0",
     "simplebar-vue": "^1.4.0",
-    "vue-js-modal": "^1.3.33"
+    "vue-js-modal": "^1.3.33",
+    "vue-window-size": "^0.2.5"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
