--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^2.0.0",
     "simplebar-vue": "^1.4.0",
     "vue-js-modal": "^1.3.33",
+    "vue-notification": "^1.3.20",
     "vue-window-size": "^0.2.5"
   },
   "devDependencies": {
